
# ==========================================================================
# Copyright(c)'2008 by PRiSM Laboratory Opale Team
# see the copyright file for more information
# Author: B. Le Cun
# Makefile.am for examples Bob++ library
#
#       This makefile.am is used to generate the real makefile using the GNU
#       autotools suite.
#
# ==========================================================================

SUBDIRS= Mole flowshop  ks  Mip_Bobo  Mip_Cuts  Mip_Simple  Qap  UQ01 queen  SimBB  vrp Tests sat
